--- a/simple_rag.ipynb
+++ b/simple_rag.ipynb
@@ -8,7 +8,7 @@
     "# Simple Retrieval-Augmented Generation (RAG) System\n",
     "\n",
     "**Course Assignment: Implementing a Simple Retrieval-Augmented Generation (RAG) System**  \n",
-    "**Student:** _YOUR NAME HERE_  \n",
+    "**Student:** Asma Begum \n",
     "\n",
     "This notebook implements a basic RAG pipeline with the following steps:\n",
     "\n",
