--- a/simple_rag.ipynb
+++ b/simple_rag.ipynb
@@ -323,4 +323,20 @@
     "    print(\"\\n\" + \"=\"*70 + \"\\n\")"
    ]
   }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.10"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
+
 
